<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.UserFragment"
    android:background="@color/material_dynamic_neutral_variant90">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/userLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageButton
                android:id="@+id/settingsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_setting"
                android:background="@null"
                android:layout_marginTop="15dp"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                />
            <ImageView
                android:id="@+id/userPhoto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/icon_user"
                android:layout_marginTop="30dp"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_trophy"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="8dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/userPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/points"
                    android:textColor="@color/md_theme_primary"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/co2Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginTop="26dp"

            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/co2Saved"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_car"
                    android:layout_marginTop="8dp"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/co2CarTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/co2"
                    android:textColor="@color/md_theme_primary"
                    android:textStyle="bold"
                    android:layout_marginTop="11dp"
                    android:layout_marginStart="218dp"/>
            </LinearLayout>
            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressCar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="35dp"
                 />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_publict"
                    android:layout_marginTop="8dp"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/co2PublicTTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/co2"
                    android:textColor="@color/md_theme_primary"
                    android:textStyle="bold"
                    android:layout_marginTop="11dp"
                    android:layout_marginStart="218dp"/>
            </LinearLayout>
            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressTransit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="35dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_walk"
                    android:layout_marginTop="8dp"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/co2WalkTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/co2"
                    android:textColor="@color/md_theme_primary"
                    android:textStyle="bold"
                    android:layout_marginTop="11dp"
                    android:layout_marginStart="218dp"/>
            </LinearLayout>
            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressWalk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="35dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_walk"
                    android:layout_marginTop="8dp"
                    android:text="@string/co2consumed"
                    android:textStyle="bold"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/co2ConsumedTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="140dp"
                    android:layout_marginTop="11dp"
                    android:text="@string/co2"
                    android:textColor="@color/md_theme_primary"
                    android:textStyle="bold" />
            </LinearLayout>
            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressConsumed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="35dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="Logout" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
