...
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/material_dynamic_neutral_variant90"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarTop"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/md_theme_surfaceContainerLow">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:src="@drawable/icon_back"
                android:background="@null"
                android:layout_marginStart="15dp"
...
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appBarLayoutTop"
        />
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:defaultNavHost="true"
        app:navGraph="@navigation/main_nav_graph">


    </androidx.fragment.app.FragmentContainerView>

...
