...
    android:layout_below="@id/carousel_recycler_view"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:layout_marginTop="30dp"
    >
    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            android:layout_width="150dp"
            android:layout_height="49dp"
            style="@style/ButtonLogin"
            android:text="@string/login"
            />

...
